# brlaw_mcp_server

./: .dockerignore  Dockerfile  LICENSE  README.br.md  README.md  docker-compose.yml  docker-mcp-deployment.plan.md  pyproject.toml
.github/workflows/: test.yml
src/brlaw_mcp_server/: __init__.py  cli.py  utils.py
src/brlaw_mcp_server/domain/: _base.py  base.py  stf.py  stj.py  tjsp.py  tst.py
src/brlaw_mcp_server/presentation/: mcp.py
src/brlaw_mcp_server/scraper/: core.py  webdriver.py
src/brlaw_mcp_server/server/: core.py  input_schemas.py
tests/: conftest.py  test_domain.py  test_presentation.py  test_scraper.py  test_server.py
tests/test_scraper/: conftest.py  test_core.py  test_webdriver.py
